[build-system]
requires = [
  "cmake",  # For building binary targets in the wheel.
  "pip>=23",  # For building the pip package.
  "setuptools>=63",  # For building the pip package contents.
  "wheel",  # For building the pip package archive.
]
build-backend = "setuptools.build_meta"

[project]
name = "pymllm"
dynamic = [
  # version is in setup.py file
  'version',
]
description = "Fast and lightweight multimodal LLM inference engine for mobile and edge devices"
readme = "README.md"
authors = [
  {name="chenghua.wang", email="chenghua.wang.edu@gmail.com"},
# TODO contributors for pymllm
]
keywords = ["pymllm", "llm", "inference", "machine learning"]

# Python dependencies
requires-python = ">=3.10"
dependencies=[
  "packaging",
  "pytest",
  "pytest-html",
  "pybind11-stubgen>=2.5.1",
  "pyyaml >= 6.0.2",
  "cmake-format >= 0.6.13"
]

[project.scripts]
mllm-convertor = "pymllm.utils.mllm_convertor:main"

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc"]

[tool.usort]
# Do not try to put "first-party" imports in their own section.
first_party_detection = false

[tool.black]
target-version = ["py310", "py311", "py312"]
